<resources>
    <string name="app_name">Spotify Streamer</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_top_tracks">Top 10 Tracks</string>
    <string name="artist_search_hint">Search for artist...</string>
    <string name="btn_search_text">Search</string>
    <string name="artist_image_description">artistImage</string>
    <string name="artist_name_placeholder">Artist Name</string>
    <string name="album_name_placeholder">Album name</string>
    <string name="track_name_placeholder">Track Name</string>
    <string name="connection_error">Unable to connect. Please verify your network connection.</string>
    <string name="no_connection">There is no internet connection. Please connect to the internet and try again. </string>
    <string name="no_results">No results found. Please refine your search and try again.</string>
    <string name="title_activity_player">PlayerActivity</string>

    <string name="placeholder_text">Some text</string>
    <string name="player_album_image">player_album_image</string>
    <string name="menu_item_now_playing">Now Playing</string>
    <string name="content_description_previous_track">Previous Track</string>
    <string name="content_description_next_track">Next Track</string>
    <string name="content_description_play_track">Play/Pause</string>
</resources>
