<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal">

    <ImageButton
        android:id="@+id/player_previous_button"
        android:layout_width="@dimen/player_button_size"
        android:layout_height="@dimen/player_button_size"
        android:layout_marginRight="20dp"
        android:contentDescription="@string/content_description_previous_track"
        android:src="@android:drawable/ic_media_previous" />

    <ImageButton
        android:id="@+id/player_play_button"
        android:layout_width="@dimen/player_button_size"
        android:layout_height="@dimen/player_button_size"
        android:layout_marginRight="20dp"
        android:contentDescription="@string/content_description_play_track"
        android:src="@android:drawable/ic_media_play" />

    <ImageButton
        android:id="@+id/player_next_button"
        android:layout_width="@dimen/player_button_size"
        android:layout_height="@dimen/player_button_size"
        android:contentDescription="@string/content_description_next_track"
        android:src="@android:drawable/ic_media_next" />

</LinearLayout>