<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="?attr/listPreferredItemHeightLarge"
    android:orientation="horizontal"
    android:paddingBottom="@dimen/abc_dialog_list_padding_vertical_material"
    android:paddingLeft="@dimen/abc_list_item_padding_horizontal_material"
    android:paddingRight="@dimen/abc_list_item_padding_horizontal_material"
    android:paddingTop="@dimen/abc_dialog_list_padding_vertical_material">

    <ImageView
        android:id="@+id/track_imageview"
        android:layout_width="@dimen/thumbnail_width"
        android:layout_height="@dimen/thumbnail_height"
        android:layout_gravity="center"
        android:contentDescription="@string/artist_image_description"
        android:scaleType="fitCenter"
        android:src="@drawable/placeholder" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="@dimen/artist_left_margin">

        <TextView
            android:id="@+id/track_textview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical|bottom"
            android:maxLines="2"
            android:text="@string/track_name_placeholder"
            android:textSize="@dimen/list_track_textview_size"
            android:textStyle="bold" />
        <TextView
            android:id="@+id/album_textview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/track_textview"
            android:layout_gravity="center_vertical"
            android:maxLines="2"
            android:text="@string/album_name_placeholder"
            android:textSize="@dimen/list_album_textview_size" />

    </RelativeLayout>


</LinearLayout>