<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginBottom="2dp"
    android:layout_marginLeft="2dp"
    android:layout_marginRight="2dp"
    android:layout_marginTop="2dp"
    tools:context="com.luismedinaweb.spotifystreamer.PlayerFragment">


    <ImageView
        android:id="@+id/player_album_imageView"
        android:layout_width="@dimen/player_album_image_max_dimension"
        android:layout_height="@dimen/player_album_image_max_dimension"
        android:layout_centerVertical="true"
        android:contentDescription="@string/player_album_image" />

    <TextView
        android:id="@+id/player_artist_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="10dp"
        android:layout_toRightOf="@id/player_album_imageView"
        android:maxLines="2"
        android:text="@string/placeholder_text"
        android:textSize="@dimen/player_artist_textview_size" />

    <TextView
        android:id="@+id/player_album_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/player_artist_textView"
        android:layout_marginLeft="20dp"
        android:layout_toRightOf="@id/player_album_imageView"
        android:maxLines="2"
        android:text="@string/placeholder_text"
        android:textSize="@dimen/player_album_textview_size" />

    <TextView
        android:id="@+id/player_track_textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/player_album_textView"
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="50dp"
        android:layout_toRightOf="@id/player_album_imageView"
        android:maxLines="2"
        android:text="@string/placeholder_text"
        android:textSize="@dimen/player_track_textview_size" />

    <SeekBar
        android:id="@+id/player_seekBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/player_track_textView"
        android:layout_gravity="center_horizontal"
        android:layout_marginLeft="10dp"
        android:layout_toRightOf="@id/player_album_imageView"
        android:indeterminate="false" />

    <LinearLayout
        android:id="@+id/timeLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/player_seekBar"
        android:layout_marginLeft="10dp"
        android:layout_toRightOf="@id/player_album_imageView"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/playing_time_textview"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_weight="1"
            android:text="@string/placeholder_text"
            android:textSize="@dimen/player_time_textview_size" />

        <TextView
            android:id="@+id/finish_time_textview"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginRight="10dp"
            android:layout_weight="1"
            android:gravity="right"
            android:text="@string/placeholder_text"
            android:textSize="@dimen/player_time_textview_size" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/player_seekBar"
        android:layout_gravity="center_vertical"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="10dp"
        android:layout_toRightOf="@id/player_album_imageView"
        android:gravity="center"
        android:orientation="horizontal"
        android:weightSum="4">

        <ImageButton
            android:id="@+id/player_previous_button"
            android:layout_width="0dip"
            android:layout_height="@dimen/player_button_size"
            android:layout_marginRight="20dp"
            android:layout_weight="1"
            android:contentDescription="@string/content_description_previous_track"
            android:src="@android:drawable/ic_media_previous" />

        <ImageButton
            android:id="@+id/player_play_button"
            android:layout_width="0dip"
            android:layout_height="@dimen/player_button_size"
            android:layout_marginRight="20dp"
            android:layout_weight="1"
            android:contentDescription="@string/content_description_play_track"
            android:src="@android:drawable/ic_media_play" />

        <ImageButton
            android:id="@+id/player_next_button"
            android:layout_width="0dip"
            android:layout_height="@dimen/player_button_size"
            android:layout_weight="1"
            android:contentDescription="@string/content_description_next_track"
            android:src="@android:drawable/ic_media_next" />
    </LinearLayout>
</RelativeLayout>





